<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2014 Davide Cirillo
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  ~     Come on, don't tell me you read that.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#ededed">


    <ImageView
        android:id="@+id/image_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"/>

    <ImageView
        android:id="@+id/tick_image"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/image_view"
        android:layout_alignStart="@+id/image_view"
        android:layout_alignTop="@+id/image_view"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ticked_image"
        android:elevation="5dp"
        android:src="@drawable/ic_check_white_24dp"
        android:visibility="invisible"/>


</RelativeLayout>